Modify : json 형식 수정

--- a/api/회원가입 페이지.md
+++ b/api/회원가입 페이지.md
@@ -14,10 +14,10 @@
 
 ```json
 {
-  campus: "서울",
-  ssafyTrack: "Java Track",
-  studentNumber: "0645387",
-  studentName: "박정환",
+  "campus": "서울",
+  "ssafyTrack": "Java Track",
+  "studentNumber": "0645387",
+  "studentName": "박정환",
 };
 ```
 
@@ -25,9 +25,9 @@
 
 ```json
 {
-  status: 200,
-  success: true,
-  message: "",
+  "status": 200,
+  "success": true,
+  "message": "",
 };
 ```
 
@@ -45,7 +45,7 @@
 
 ```json
 {
-  email: "ssafy@gmail.com",
+  "email": "ssafy@gmail.com",
 };
 ```
 
@@ -53,21 +53,21 @@
 
 ```json
 {
-  status: 200,
-  success: true,
-  message: "",
+  "status": 200,
+  "success": true,
+  "message": "",
 };
 
 {
-  status: 401,
-  success: false,
-  message: "이미 등록된 이메일입니다.",
+  "status": 401,
+  "success": false,
+  "message": "이미 등록된 이메일입니다.",
 };
 
 {
-  status: 500,
-  success: false,
-  message: "이메일 전송에 실패하였습니다.",
+  "status": 500,
+  "success": false,
+  "message": "이메일 전송에 실패하였습니다.",
 };
 ```
 
@@ -83,8 +83,8 @@
 
 ```json
 {
-  code: "abc12345",
-  email: "ssafy@gmail.com",
+  "code": "abc12345",
+  "email": "ssafy@gmail.com",
 };
 ```
 
@@ -92,21 +92,21 @@
 
 ```json
 {
-  status: 200,
-  success: true,
-  message: "",
+  "status": 200,
+  "success": true,
+  "message": "",
 };
 
 {
-  status: 400,
-  success: false,
-  message: "올바른 인증 코드가 아닙니다.",
+  "status": 400,
+  "success": false,
+  "message": "올바른 인증 코드가 아닙니다.",
 };
 
 {
-  status: 403,
-  success: false,
-  message: "입력 유효 시간이 초과되었습니다.",
+  "status": 403,
+  "success": false,
+  "message": "입력 유효 시간이 초과되었습니다.",
 };
 ```
 
@@ -125,36 +125,36 @@
 ```json
 {
   // 교육생 인증
-  campus: "서울",
-  ssafyTrack: "Java Track",
-  studentNumber: "0645387", // string
-  studentName: "박정환",
+  "campus": "서울",
+  "ssafyTrack": "Java Track",
+  "studentNumber": "0645387", // string
+  "studentName": "박정환",
 
   // 기본 정보 작성
-  email: "ssafy@gmail.com",
-  password: "a123456",
+  "email": "ssafy@gmail.com",
+  "password": "a123456",
 
   // 프로필 작성
-  profileImg: "프로필 사진", // (선택)
-  selfIntroduction: "안녕하세요...", // (길이: default)
-  job1: "프론트엔드 (Front-end)",
-  job2: "백엔드 (Back-end)", // (선택)
-  techStacks: [
+  "profileImg": "프로필 사진", // (선택)
+  "selfIntroduction": "안녕하세요...", // (길이: default)
+  "job1": "프론트엔드 (Front-end)",
+  "job2": "백엔드 (Back-end)", // (선택)
+  "techStacks": [
     // (필수 2가지 이상)
     {
-      techStacksCode: "", // 프론트는 s100 ~ s300  | 백 s300 ~ 500 | 툴 s500 ~ 700
-      techStacksName: "JavaScript",
-      techStacksLevel: "상",
+      "techStacksCode": "", // 프론트는 s100 ~ s300  | 백 s300 ~ 500 | 툴 s500 ~ 700
+      "techStacksName": "JavaScript",
+      "techStacksLevel": "상",
     },
     {
-      techStacksCode: "",
-      techStacksName: "TypeScript",
-      techStacksLevel: "중",
+      "techStacksCode": "",
+      "techStacksName": "TypeScript",
+      "techStacksLevel": "중",
     },
   ],
-  githubUrl: "https://github.com/ssafy-mate", // (선택)
-  etcUrl: "https://velog.io/@ssafy-mate", // (선택)
-  agreement: true,
+  "githubUrl": "https://github.com/ssafy-mate", // (선택)
+  "etcUrl": "https://velog.io/@ssafy-mate", // (선택)
+  "agreement": true,
 };
 ```
 
@@ -162,20 +162,20 @@
 
 ```json
 {
-  status: 200,
-  success: true,
-  message: "",
+  "status": 200,
+  "success": true,
+  "message": "",
 };
 
 {
-  status: 400,
-  success: false,
-  message: "필수 입력 사항이 모두 입력되지 않았습니다.",
+  "status": 400,
+  "success": false,
+  "message": "필수 입력 사항이 모두 입력되지 않았습니다.",
 };
 
 {
-  status: 500,
-  success: false,
-  message: "회원가입 정보 저장에 실패하였습니다.",
+  "status": 500,
+  "success": false,
+  "message": "회원가입 정보 저장에 실패하였습니다.",
 };
 ```
