Modify : 회원가입 API의 JSON 표기 세미콜론 제거

--- a/api/회원가입 페이지.md
+++ b/api/회원가입 페이지.md
@@ -17,8 +17,8 @@
   "campus": "서울",
   "ssafyTrack": "Java Track",
   "studentNumber": "0645387",
-  "studentName": "박정환",
-};
+  "studentName": "박정환"
+}
 ```
 
 - Response
@@ -27,8 +27,8 @@
 {
   "status": 200,
   "success": true,
-  "message": "",
-};
+  "message": ""
+}
 ```
 
 <br />
@@ -45,8 +45,8 @@
 
 ```json
 {
-  "email": "ssafy@gmail.com",
-};
+  "email": "ssafy@gmail.com"
+}
 ```
 
 - Response
@@ -56,19 +56,19 @@
   "status": 200,
   "success": true,
   "message": "",
-};
+}
 
 {
   "status": 401,
   "success": false,
   "message": "이미 등록된 이메일입니다.",
-};
+}
 
 {
   "status": 500,
   "success": false,
   "message": "이메일 전송에 실패하였습니다.",
-};
+}
 ```
 
 <br />
@@ -84,8 +84,8 @@
 ```json
 {
   "code": "abc12345",
-  "email": "ssafy@gmail.com",
-};
+  "email": "ssafy@gmail.com"
+}
 ```
 
 - Response
@@ -95,19 +95,19 @@
   "status": 200,
   "success": true,
   "message": "",
-};
+}
 
 {
   "status": 400,
   "success": false,
   "message": "올바른 인증 코드가 아닙니다.",
-};
+}
 
 {
   "status": 403,
   "success": false,
   "message": "입력 유효 시간이 초과되었습니다.",
-};
+}
 ```
 
 <br />
@@ -144,18 +144,18 @@
     {
       "techStacksCode": "", // 프론트는 s100 ~ s300  | 백 s300 ~ 500 | 툴 s500 ~ 700
       "techStacksName": "JavaScript",
-      "techStacksLevel": "상",
+      "techStacksLevel": "상"
     },
     {
       "techStacksCode": "",
       "techStacksName": "TypeScript",
-      "techStacksLevel": "중",
-    },
+      "techStacksLevel": "중"
+    }
   ],
   "githubUrl": "https://github.com/ssafy-mate", // (선택)
   "etcUrl": "https://velog.io/@ssafy-mate", // (선택)
-  "agreement": true,
-};
+  "agreement": true
+}
 ```
 
 - Response
@@ -165,17 +165,17 @@
   "status": 200,
   "success": true,
   "message": "",
-};
+}
 
 {
   "status": 400,
   "success": false,
   "message": "필수 입력 사항이 모두 입력되지 않았습니다.",
-};
+}
 
 {
   "status": 500,
   "success": false,
   "message": "회원가입 정보 저장에 실패하였습니다.",
-};
+}
 ```
