Modify : 회원가입 페이지 API 표기 수정

--- a/api/회원가입 페이지.md
+++ b/api/회원가입 페이지.md
@@ -29,6 +29,12 @@
   "success": true,
   "message": ""
 }
+
+{
+  "status": 400,
+  "success": false,
+  "message": "",
+}
 ```
 
 <br />
@@ -124,39 +130,54 @@
 
 ```json
 {
-  // 교육생 인증
   "campus": "서울",
   "ssafyTrack": "Java Track",
-  "studentNumber": "0645387", // string
+  "studentNumber": "0645387",
   "studentName": "박정환",
-
-  // 기본 정보 작성
   "email": "ssafy@gmail.com",
   "password": "a123456",
-
-  // 프로필 작성
-  "profileImg": "프로필 사진", // (선택)
-  "selfIntroduction": "안녕하세요...", // (길이: default)
+  "profileImg": "프로필 사진",
+  "selfIntroduction": "안녕하세요...",
   "job1": "프론트엔드 (Front-end)",
-  "job2": "백엔드 (Back-end)", // (선택)
+  "job2": "백엔드 (Back-end)",
   "techStacks": [
-    // (필수 2가지 이상)
     {
-      "techStacksCode": "", // 프론트는 s100 ~ s300  | 백 s300 ~ 500 | 툴 s500 ~ 700
+      "techStacksCode": "ts100",
       "techStacksName": "JavaScript",
       "techStacksLevel": "상"
     },
     {
-      "techStacksCode": "",
-      "techStacksName": "TypeScript",
+      "techStacksCode": "ts101",
+      "techStacksName": "Redux",
+      "techStacksLevel": "중"
+    }
+    {
+      "techStacksCode": "ts300",
+      "techStacksName": "Spring Boot",
+      "techStacksLevel": "중"
+    }
+    {
+      "techStacksCode": "ts301",
+      "techStacksName": "MySQL",
+      "techStacksLevel": "중"
+    }
+    {
+      "techStacksCode": "ts500",
+      "techStacksName": "Git",
       "techStacksLevel": "중"
     }
   ],
-  "githubUrl": "https://github.com/ssafy-mate", // (선택)
-  "etcUrl": "https://velog.io/@ssafy-mate", // (선택)
+  "githubUrl": "https://github.com/ssafy-mate",
+  "etcUrl": "https://velog.io/@ssafy-mate",
   "agreement": true
 }
 ```
+
+> 선택 항목 : profileImg, job2, githubUrl, etcUrl
+
+> 최소 요건 : techStacks 2가지 이상
+
+> techStackCode : 프론트는 s100 ~ s300 | 백 s300 ~ 500 | 툴 s500 ~ 700
 
 - Response
 
