Modify : techStackCode 부분 수정

--- a/api/회원가입 페이지.md
+++ b/api/회원가입 페이지.md
@@ -177,7 +177,7 @@
 
 > 최소 요건 : techStacks 2가지 이상
 
-> techStackCode : 프론트는 s100 ~ s300 | 백 s300 ~ 500 | 툴 s500 ~ 700
+> techStackCode : Front-end s100 ~ s300 | Back-end s300 ~ 500 | Tools and ETC s500 ~ 700
 
 - Response
 
