Modify : 로그인 API URL 수정

--- a/api/로그인 페이지.md
+++ b/api/로그인 페이지.md
@@ -2,11 +2,11 @@
 
 ## 로그인
 
-| TYPE |       URL        |
-| :--: | :--------------: |
-| POST | /api/user/signin |
+| TYPE |        URL        | TOKEN |
+| :--: | :---------------: | :---: |
+| POST | /api/user/sign-in |   X   |
 
-- Request
+### Request
 
 ```json
 {
@@ -15,19 +15,25 @@
 }
 ```
 
-- Response
+### Response
+
+- 로그인 성공
 
 ```json
 {
   "status": 200,
   "success": true,
   "message": "",
-  "token": "ad123sdafgfa0asdfas12390",
+  "token": "ad123sdafgfa0asdfas12390"
 }
+```
 
+- 로그인 실패 (아이디 또는 비밀번호 불일치)
+
+```json
 {
   "status": 401,
   "success": false,
-  "message": "아이디 또는 비밀번호를 확인하세요.",
+  "message": "아이디 또는 비밀번호가 잘못 입력 되었습니다."
 }
 ```
