Modify : 회원가입 API URL 수정

--- a/api/회원가입 페이지.md
+++ b/api/회원가입 페이지.md
@@ -1,16 +1,14 @@
 # 회원가입 페이지 API
 
-## 회원가입 (1단계 : 교육생 인증)
+## 교육생 인증 (1단계 : 교육생 인증)
 
-### 교육생 인증
-
-| TYPE |           URL           |
-| :--: | :---------------------: |
-| GET  | /api/verification/ssafy |
+| TYPE |                 URL                  | TOKEN |
+| :--: | :----------------------------------: | :---: |
+| GET  | /api/user/sign-up/verification/ssafy |   X   |
 
 > DB 저장 x
 
-- Request
+### Request
 
 ```json
 {
@@ -21,7 +19,9 @@
 }
 ```
 
-- Response
+### Response
+
+- 인증 성공
 
 ```json
 {
@@ -29,25 +29,27 @@
   "success": true,
   "message": ""
 }
+```
 
+- 인증 실패
+
+```json
 {
   "status": 400,
   "success": false,
-  "message": "",
+  "message": ""
 }
 ```
 
 <br />
 
-## 회원가입 (2단계 : 기본 정보 작성)
+## 이메일 인증 요청 & 재요청 (2단계 : 기본 정보 작성)
 
-### 이메일 인증 요청 & 재요청
+| TYPE |                 URL                  | TOKEN |
+| :--: | :----------------------------------: | :---: |
+| POST | /api/user/sign-up/verification/email |   X   |
 
-| TYPE |           URL           |
-| :--: | :---------------------: |
-| POST | /api/verification/email |
-
-- Request
+### Request
 
 ```json
 {
@@ -55,37 +57,47 @@
 }
 ```
 
-- Response
+### Response
+
+- 인증 성공
 
 ```json
 {
   "status": 200,
   "success": true,
-  "message": "",
+  "message": ""
 }
+```
 
+- 이미 등록된 이메일인 경우
+
+```json
 {
   "status": 401,
   "success": false,
-  "message": "이미 등록된 이메일입니다.",
+  "message": "이미 등록된 이메일입니다."
 }
+```
 
+- 서버 문제로 이메일 전송 실패
+
+```json
 {
   "status": 500,
   "success": false,
-  "message": "이메일 전송에 실패하였습니다.",
+  "message": "Internal Server Error, 이메일 전송 실패"
 }
 ```
 
 <br />
 
-### 인증코드 확인
+## 인증코드 확인 (2단계 : 기본 정보 작성)
 
-| TYPE |           URL           |
-| :--: | :---------------------: |
-| PUT  | /api/verification/email |
+| TYPE |                 URL                  | TOKEN |
+| :--: | :----------------------------------: | :---: |
+| PUT  | /api/user/sign-up/verification/email |   X   |
 
-- Request
+### Request
 
 ```json
 {
@@ -94,39 +106,47 @@
 }
 ```
 
-- Response
+### Response
+
+- 인증 코드 확인 성공
 
 ```json
 {
   "status": 200,
   "success": true,
-  "message": "",
+  "message": ""
 }
+```
 
+- 올바른 인증 코드가 아닌 경우
+
+```json
 {
   "status": 400,
   "success": false,
-  "message": "올바른 인증 코드가 아닙니다.",
+  "message": "올바른 인증 코드가 아닙니다."
 }
+```
 
+- 입력 유효 시간 초과
+
+```json
 {
   "status": 403,
   "success": false,
-  "message": "입력 유효 시간이 초과되었습니다.",
+  "message": "입력 유효 시간이 초과되었습니다."
 }
 ```
 
 <br />
 
-## 회원가입 (3단계 : 프로필 작성)
+### 계정 만들기 (3단계 : 프로필 작성)
 
-### 계정 만들기
+| TYPE |    URL    | TOKEN |
+| :--: | :-------: | :---: |
+| POST | /api/user |   X   |
 
-| TYPE |       URL        |
-| :--: | :--------------: |
-| POST | /api/user/signup |
-
-- Request
+### Request
 
 ```json
 {
@@ -142,27 +162,22 @@
   "job2": "백엔드 (Back-end)",
   "techStacks": [
     {
-      "techStacksCode": "ts100",
       "techStacksName": "JavaScript",
       "techStacksLevel": "상"
     },
     {
-      "techStacksCode": "ts101",
       "techStacksName": "Redux",
       "techStacksLevel": "중"
     }
     {
-      "techStacksCode": "ts300",
       "techStacksName": "Spring Boot",
       "techStacksLevel": "중"
     }
     {
-      "techStacksCode": "ts301",
       "techStacksName": "MySQL",
       "techStacksLevel": "중"
     }
     {
-      "techStacksCode": "ts500",
       "techStacksName": "Git",
       "techStacksLevel": "중"
     }
@@ -177,26 +192,26 @@
 
 > 최소 요건 : techStacks 2가지 이상
 
-> techStackCode : Front-end s100 ~ s300 | Back-end s300 ~ 500 | Tools and ETC s500 ~ 700
+> formData 형식으로 전송
 
-- Response
+### Response
+
+- 계정 생성 성공
 
 ```json
 {
   "status": 200,
   "success": true,
-  "message": "",
+  "message": ""
 }
+```
 
-{
-  "status": 400,
-  "success": false,
-  "message": "필수 입력 사항이 모두 입력되지 않았습니다.",
-}
+- 계정 생성 실패 (서버 문제)
 
+```json
 {
   "status": 500,
   "success": false,
-  "message": "회원가입 정보 저장에 실패하였습니다.",
+  "message": "Internal Server Error, 계정 생성 실패"
 }
 ```
