Add : 팀 생성 페이지 프로젝트 선택 API 추가

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -1,6 +1,54 @@
 # 팀 관련
 
-## 팀 생성
+## 프로젝트 선택 시 (팀 생성 페이지)
+
+| TYPE |      URL       | TOKEN |
+| :--: | :------------: | :---: |
+| GET  | /api/auth/team |   O   |
+
+### Request
+
+```json
+{
+  "userEamil": "ssafy@test.com",
+  "selectedProject": "특화 프로젝트"
+}
+```
+
+### Response
+
+- 팀이 없을 경우
+
+```json
+{
+  "status": 200,
+  "success": true,
+  "belongToTeam": true
+}
+```
+
+- 팀이 이미 속해 있을 경우
+
+```json
+{
+  "status": 200,
+  "success": true,
+  "belongToTeam": false
+}
+```
+
+- 서버 오류
+
+```json
+{
+  "status": 500,
+  "success": false
+}
+```
+
+<br />
+
+## 팀 생성 요청
 
 | TYPE |      URL       | TOKEN |
 | :--: | :------------: | :---: |
