--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -2,9 +2,9 @@
 
 ## 프로젝트 선택 시 (팀 생성 페이지)
 
-| TYPE |      URL       | TOKEN |
-| :--: | :------------: | :---: |
-| GET  | /api/auth/team |   O   |
+| TYPE |         URL         | TOKEN |
+| :--: | :-----------------: | :---: |
+| GET  | /api/auth/user/team |   O   |
 
 ### Request
 
@@ -14,6 +14,8 @@
   "selectedProject": "특화 프로젝트"
 }
 ```
+
+> params
 
 ### Response
 
@@ -48,7 +50,7 @@
 
 <br />
 
-## 팀 생성 요청
+## CREATE | 팀 생성 요청
 
 | TYPE |      URL       | TOKEN |
 | :--: | :------------: | :---: |
@@ -58,6 +60,7 @@
 
 ```json
 {
+  "owner": "ssafy@test.com",
   "teamImg": "팀 이미지.png(파일 형태)",
   "campus": "서울",
   "project": "특화 프로젝트",
@@ -107,5 +110,281 @@
   "status": 500,
   "success": false,
   "message": "Internal Server, 팀 생성 실패"
+}
+```
+
+## READ | 팀 상세 정보 페이지
+
+| TYPE |          URL           | TOKEN |
+| :--: | :--------------------: | :---: |
+| GET  | /api/auth/team/:teamId |   O   |
+
+### Request
+
+```json
+{}
+```
+
+### Response
+
+- 팀 상세 정보 받아오기 성공 시
+
+```json
+{
+  "status": 200,
+  "success": true,
+  "teamData": {
+    "owner": {
+      "userId": 1,
+      "userName": "박정환",
+      "profileImg": "프로필 이미지 URL",
+      "campus": "서울",
+      "ssafyTrack": "Java Track",
+      "projectTrack": "빅데이터",
+      "job1": "프론트엔드 (Front-end)",
+      "job2": "백엔드 (Back-end)",
+      "techStacks": ["React", "Redux", "TypeScript"],
+      "githubUrl": "https://github.com/JeongHwan-dev"
+    },
+    "teamImg": "팀 이미지.png(파일 형태)",
+    "campus": "서울",
+    "project": "특화 프로젝트",
+    "projectTrack": "빅데이터",
+    "teamName": "싸피메이트",
+    "notice": "최우수상에 도전할 팀원을 모집합니다.",
+    "introduction": "환상의 호흡으로 프로젝트 진행해 보고 싶습니다. 백엔드는 ... 프론트는 ... 이런 식으로 개발 진행하려고 합니다.",
+    "techStacks": [
+      {
+        "techStackName": "JavaScript"
+      },
+      {
+        "techStackName": "JPA"
+      },
+      {
+        "techStackName": "Spring Boot"
+      }
+    ],
+    "totalRecruitment": 6,
+    "frontendRecruitment": 3,
+    "backendRecruitment": 3,
+    "totalHeadcount": 5,
+    "frontendHeadcount": 3,
+    "backendHeadcount": 2,
+    "members": [
+      {
+        "userId": 1,
+        "userName": "박정환",
+        "profileImg": "프로필 이미지 URL",
+        "campus": "서울",
+        "ssafyTrack": "Java Track",
+        "projectTrack": "빅데이터",
+        "job1": "프론트엔드 (Front-end)",
+        "job2": "",
+        "techStacks": [
+          {
+            "techStackName": "React",
+            "techStackLevel": "중"
+          },
+          {
+            "techStackName": "Redux",
+            "techStackLevel": "중"
+          },
+          ,
+          {
+            "techStackName": "React-Query",
+            "techStackLevel": "하"
+          }
+        ],
+        "githubUrl": "https://github.com/JeongHwan-dev"
+      },
+      {
+        "userId": 2,
+        "userName": "이정훈",
+        "profileImg": "프로필 이미지 URL",
+        "campus": "서울",
+        "ssafyTrack": "Java Track",
+        "projectTrack": "빅데이터",
+        "job1": "백엔드 (Back-end)",
+        "job2": "프론트엔드 (Front-end)",
+        "techStacks": [
+          {
+            "techStackName": "Spring Boot",
+            "techStackLevel": "상"
+          },
+          {
+            "techStackName": "JPA",
+            "techStackLevel": "MySQL"
+          },
+          ,
+          {
+            "techStackName": "MySQL",
+            "techStackLevel": "하"
+          }
+        ],
+        "githubUrl": "https://github.com/person003333"
+      },
+      {
+        "userId": 3,
+        "userName": "소정은",
+        "profileImg": "프로필 이미지 URL",
+        "campus": "서울",
+        "ssafyTrack": "Java Track",
+        "projectTrack": "빅데이터",
+        "job1": "프론트엔드 (Front-end)",
+        "job2": "백엔드 (Back-end)",
+        "techStacks": [
+          {
+            "techStackName": "Vue.js",
+            "techStackLevel": "상"
+          },
+          {
+            "techStackName": "React",
+            "techStackLevel": "중"
+          },
+          ,
+          {
+            "techStackName": "emotion",
+            "techStackLevel": "중"
+          }
+        ],
+        "githubUrl": "https://github.com/sojjeong"
+      }
+    ]
+  }
+}
+```
+
+- 팀 상세 정보 받아오기 성공 시
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 팀 상세 정보 조회 실패"
+}
+```
+
+<br />
+
+## UPDATE | 팀 상세 정보 수정 요청
+
+| TYPE |          URL           | TOKEN |
+| :--: | :--------------------: | :---: |
+| PUT  | /api/auth/team/:teamId |   O   |
+
+### Request
+
+```json
+{
+  "userId": 1,
+  "teamImg": "팀 이미지.png(파일 형태)",
+  "campus": "서울",
+  "project": "특화 프로젝트",
+  "projectTrack": "빅데이터",
+  "teamName": "싸피메이트",
+  "notice": "최우수상에 도전할 팀원을 모집합니다.",
+  "introduction": "환상의 호흡으로 프로젝트 진행해 보고 싶습니다. 백엔드는 ... 프론트는 ... 이런 식으로 개발 진행하려고 합니다.",
+  "techStacks": [
+    {
+      "techStacksName": "JavaScript"
+    },
+    {
+      "techStacksName": "JPA"
+    },
+    {
+      "techStacksName": "Spring Boot"
+    }
+  ],
+  "totalRecruitment": 6,
+  "frontendRecruitment": 3,
+  "backendRecruitment": 3
+}
+```
+
+> 선택 항목 : introduction
+
+> 최소 요건 : techStacks 2가지 이상
+
+> formData 형식으로 전송
+
+### Response
+
+- 팀 상세 정보 수정 성공 시
+
+```json
+{
+  "status": 200,
+  "success": true,
+  "message": "팀 상세 정보 수정이 완료되었습니다."
+}
+```
+
+- 팀 상세 정보 수정 권한 없음
+
+```json
+{
+  "status": 400,
+  "success": false,
+  "message": "사용자는 정보를 수정할 수 있는 권한이 없습니다."
+}
+```
+
+- 팀 상세 정보 수정 실패 시
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server, 팀 상세 정보 수정 실패"
+}
+```
+
+<br />
+
+## DELETE | 팀 삭제
+
+|  TYPE  |          URL           | TOKEN |
+| :----: | :--------------------: | :---: |
+| DELETE | /api/auth/team/:teamId |   O   |
+
+### Request
+
+```json
+{
+  "userId": 1
+}
+```
+
+> params
+
+### Response
+
+- 팀 삭제 성공
+
+```json
+{
+  "status": 200,
+  "success": true,
+  "meesage": "팀 삭제가 완료되었습니다."
+}
+```
+
+- 권한 없을 때 (오너 정보 불일치)
+
+```json
+{
+  "status": 400,
+  "success": false,
+  "meesage": "사용자는 팀 삭제 권한이 없습니다."
+}
+```
+
+- 서버 처리 실패
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "meesage": "Internal Server, 팀 삭제 실패"
 }
 ```
