Modify : 회원가입 API 설계 중 오타 수정

--- a/api/회원가입 페이지.md
+++ b/api/회원가입 페이지.md
@@ -19,6 +19,8 @@
 }
 ```
 
+> params
+
 ### Response
 
 - 인증 성공
@@ -140,7 +142,7 @@
 
 <br />
 
-### 계정 만들기 (3단계 : 프로필 작성)
+### CREATE | 계정 생성 (3단계 : 프로필 작성)
 
 | TYPE |    URL    | TOKEN |
 | :--: | :-------: | :---: |
@@ -162,24 +164,24 @@
   "job2": "백엔드 (Back-end)",
   "techStacks": [
     {
-      "techStacksName": "JavaScript",
-      "techStacksLevel": "상"
+      "techStackName": "JavaScript",
+      "techStackLevel": "상"
     },
     {
-      "techStacksName": "Redux",
-      "techStacksLevel": "중"
+      "techStackName": "Redux",
+      "techStackLevel": "중"
     }
     {
-      "techStacksName": "Spring Boot",
-      "techStacksLevel": "중"
+      "techStackName": "Spring Boot",
+      "techStackLevel": "중"
     }
     {
-      "techStacksName": "MySQL",
-      "techStacksLevel": "중"
+      "techStackName": "MySQL",
+      "techStackLevel": "중"
     }
     {
-      "techStacksName": "Git",
-      "techStacksLevel": "중"
+      "techStackName": "Git",
+      "techStackLevel": "중"
     }
   ],
   "githubUrl": "https://github.com/ssafy-mate",
