--- a/api/채팅.md
+++ b/api/채팅.md
@@ -75,7 +75,7 @@
   "user_id1" : "123", (본인 아이디)
   "user_id2" : "124" (상대방 아이디)
 }
-
+```
 ### Response
 
 - 방이 있는 경우
@@ -91,11 +91,16 @@
 
 | TYPE |        URL        | TOKEN |
 | :--: | :---------------: | :---: |
-|  GET | /api/chat/log/{userId}  |   O   |
+|  GET |   /api/chat/log   |   O   |
 
 ### Request
 
-- URL GET(상대방 아이디)
+```json
+{
+  "user_id1" : "123", (본인 아이디)
+  "user_id2" : "124" (상대방 아이디)
+}
+```
 
 ### Response
 
