Modify : 팀 상세 정보 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -136,17 +136,9 @@
   "teamData": {
     "owner": {
       "userId": 1,
-      "userName": "박정환",
-      "profileImg": "프로필 이미지 URL",
-      "campus": "서울",
-      "ssafyTrack": "Java Track",
-      "projectTrack": "빅데이터",
-      "job1": "프론트엔드 (Front-end)",
-      "job2": "백엔드 (Back-end)",
-      "techStacks": ["React", "Redux", "TypeScript"],
-      "githubUrl": "https://github.com/JeongHwan-dev"
+      "userName": "박정환"
     },
-    "teamImg": "팀 이미지.png(파일 형태)",
+    "teamImgUrl": "팀 이미지.png(파일 형태)",
     "campus": "서울",
     "project": "특화 프로젝트",
     "projectTrack": "빅데이터",
@@ -155,13 +147,39 @@
     "introduction": "환상의 호흡으로 프로젝트 진행해 보고 싶습니다. 백엔드는 ... 프론트는 ... 이런 식으로 개발 진행하려고 합니다.",
     "techStacks": [
       {
+        "id": 1,
         "techStackName": "JavaScript"
       },
       {
+        "id": 2,
         "techStackName": "JPA"
       },
       {
+        "id": 3,
         "techStackName": "Spring Boot"
+      }
+    ],
+    "members": [
+      {
+        "userId": 1,
+        "userName": "박정환",
+        "profileImgUrl": "프로필 이미지 URL",
+        "ssafyTrack": "Java Track",
+        "job1": "프론트엔드 (Front-end)"
+      },
+      {
+        "userId": 2,
+        "userName": "이정훈",
+        "profileImgUrl": "프로필 이미지 URL",
+        "ssafyTrack": "Java Track",
+        "job1": "백엔드 (Back-end)"
+      },
+      {
+        "userId": 3,
+        "userName": "소정은",
+        "profileImgUrl": "프로필 이미지 URL",
+        "ssafyTrack": "Java Track",
+        "job1": "프론트엔드 (Front-end)"
       }
     ],
     "totalRecruitment": 6,
@@ -169,87 +187,7 @@
     "backendRecruitment": 3,
     "totalHeadcount": 5,
     "frontendHeadcount": 3,
-    "backendHeadcount": 2,
-    "members": [
-      {
-        "userId": 1,
-        "userName": "박정환",
-        "profileImg": "프로필 이미지 URL",
-        "campus": "서울",
-        "ssafyTrack": "Java Track",
-        "projectTrack": "빅데이터",
-        "job1": "프론트엔드 (Front-end)",
-        "job2": "",
-        "techStacks": [
-          {
-            "techStackName": "React",
-            "techStackLevel": "중"
-          },
-          {
-            "techStackName": "Redux",
-            "techStackLevel": "중"
-          },
-          ,
-          {
-            "techStackName": "React-Query",
-            "techStackLevel": "하"
-          }
-        ],
-        "githubUrl": "https://github.com/JeongHwan-dev"
-      },
-      {
-        "userId": 2,
-        "userName": "이정훈",
-        "profileImg": "프로필 이미지 URL",
-        "campus": "서울",
-        "ssafyTrack": "Java Track",
-        "projectTrack": "빅데이터",
-        "job1": "백엔드 (Back-end)",
-        "job2": "프론트엔드 (Front-end)",
-        "techStacks": [
-          {
-            "techStackName": "Spring Boot",
-            "techStackLevel": "상"
-          },
-          {
-            "techStackName": "JPA",
-            "techStackLevel": "MySQL"
-          },
-          ,
-          {
-            "techStackName": "MySQL",
-            "techStackLevel": "하"
-          }
-        ],
-        "githubUrl": "https://github.com/person003333"
-      },
-      {
-        "userId": 3,
-        "userName": "소정은",
-        "profileImg": "프로필 이미지 URL",
-        "campus": "서울",
-        "ssafyTrack": "Java Track",
-        "projectTrack": "빅데이터",
-        "job1": "프론트엔드 (Front-end)",
-        "job2": "백엔드 (Back-end)",
-        "techStacks": [
-          {
-            "techStackName": "Vue.js",
-            "techStackLevel": "상"
-          },
-          {
-            "techStackName": "React",
-            "techStackLevel": "중"
-          },
-          ,
-          {
-            "techStackName": "emotion",
-            "techStackLevel": "중"
-          }
-        ],
-        "githubUrl": "https://github.com/sojjeong"
-      }
-    ]
+    "backendHeadcount": 2
   }
 }
 ```
