Modify : 팀 상세 정보 조회 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -138,7 +138,7 @@
       "userId": 1,
       "userName": "박정환"
     },
-    "teamImgUrl": "팀 이미지.png(파일 형태)",
+    "teamImgUrl": "URL 형식",
     "campus": "서울",
     "project": "특화 프로젝트",
     "projectTrack": "빅데이터",
@@ -192,7 +192,7 @@
 }
 ```
 
-- 팀 상세 정보 받아오기 성공 시
+- 팀 상세 정보 받아오기 실패 시
 
 ```json
 {
