Modify : 팀 상세 정보 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -134,6 +134,8 @@
   "status": 200,
   "success": true,
   "teamData": {
+    "teamId": 1,
+    "createDateTime": "2022-01-24",
     "owner": {
       "userId": 1,
       "userName": "박정환"
