Docs : 채팅 API 문서 수정

--- a/api/채팅.md
+++ b/api/채팅.md
@@ -21,14 +21,16 @@
   "message": "",
   "token": "ad123sdafgfa0asdfas12390"
   "roomList": [
-           {"roomId" : "123-124",
-              "userId" : 123, (상대방 아이디)
+           {  
+              "roomId" : "123-124",
+              "userId" : 123,
               "userName": "조원빈",
               "profileImg": "/src/main/~~~",
               "content": "안녕하세요",
               "sentTime":"2022-01-17T17:03:36.336763"
            },
-           {"roomId" : "122-124",
+           {  
+              "roomId" : "122-124",
               "userId" : 122,
               "userName": "소정은",
               "profileImg": "/src/main/~~~",
@@ -38,6 +40,7 @@
   ]
 }
 ```
+  userId는 상대방 아이디
 
 - 채팅 목록 불러오기 성공(목록이 없는 경우)
 
@@ -97,8 +100,8 @@
 
 ```json
 {
-  "user_id1" : "123", (본인 아이디)
-  "user_id2" : "124" (상대방 아이디)
+  "user_id1" : "123",
+  "user_id2" : "124"
 }
 ```
 
