--- a/api/채팅.md
+++ b/api/채팅.md
@@ -75,8 +75,8 @@
 
 ```json
 {
-  "user_id1" : "123", (본인 아이디)
-  "user_id2" : "124" (상대방 아이디)
+  "user_id1" : "123",
+  "user_id2" : "124"
 }
 ```
 ### Response
