Modify : 교육생 상세 정보 API 수정

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -1,4 +1,4 @@
-# 팀 관련
+# 교육생 관련
 
 ## READ | 교육생 상세 정보 받기
 
@@ -29,6 +29,8 @@
     "campus": "서울",
     "ssafyTrack": "Java Track",
     "selfIntroduction": "안녕하세요. 개발을 좋아하고 UI/UX 개선을 고민하는 프론트엔드 개발자 박정환입니다.",
+    "job1": "프론트엔드 (Front-end)",
+    "job2": "백엔드 (Back-end)",
 
     "commonProjectTrack": "웹 기술",
     "commonProjectTeam": {
@@ -48,8 +50,8 @@
         "projectTeam" : {
           "teamId": 1,
           "teamName": "데스파시토",
-        }
-      }
+        },
+      },
       {
         "id": 2,
         "name": "특화 프로젝트",
@@ -57,8 +59,8 @@
         "projectTeam" : {
           "teamId": ,
           "teamName": "",
-        }
-      }
+        },
+      },
       {
         "id": 3,
         "name": "자율 프로젝트",
@@ -66,8 +68,8 @@
         "projectTeam" : {
           "teamId": ,
           "teamName": "",
-        }
-      }
+        },
+      },
     ],
     "techStacks": [
       {
@@ -84,7 +86,7 @@
         "id": 3,
         "techStackName": "Redux",
         "techStackLevel": "하"
-      }
+      },
     ],
   }
 }
