--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -31,17 +31,6 @@
     "selfIntroduction": "안녕하세요. 개발을 좋아하고 UI/UX 개선을 고민하는 프론트엔드 개발자 박정환입니다.",
     "job1": "프론트엔드 (Front-end)",
     "job2": "백엔드 (Back-end)",
-
-    "commonProjectTrack": "웹 기술",
-    "commonProjectTeam": {
-      "teamId": 1,
-      "teamName": "데스파시토"
-    },
-    "specializationProjectTrack": "빅데이터",
-    "specializationprojectTeam": null,
-    "autonomyProjectTrack": null,
-    "autonomyProjectTeam": null,
-
     "projects": [
       {
         "id": 1,
@@ -88,6 +77,8 @@
         "techStackLevel": "하"
       },
     ],
+    "githubUrl": "https://github.com/ssafy-mate",
+    "etcUrl": "https://velog.io/@ssafy-mate",
   }
 }
 ```
