Docs : 채팅 API 수정

--- a/api/채팅.md
+++ b/api/채팅.md
@@ -144,6 +144,7 @@
   ]
 }
 ```
+	contentList[0]이 오래된 것, 마지막 데이터가 최신 데이터
 
 - 대화 내용이 없는 경우
 ```json
@@ -151,7 +152,6 @@
   "status": 200,
   "success": true,
   "message": "",
-  "token": "ad123sdafgfa0asdfas12390"
   "contentList": []
 }
 ```
