Docs : 대화 내용 불러오기 API 수정

--- a/api/채팅.md
+++ b/api/채팅.md
@@ -85,7 +85,7 @@
 
 | TYPE |        URL        | TOKEN |
 | :--: | :---------------: | :---: |
-|  GET |   /api/chat/log   |   X   |
+| POST |   /api/chat/log   |   X   |
 
 ### Request
 
