Modify : API 전체 포멧 수정

--- a/api/로그인 페이지.md
+++ b/api/로그인 페이지.md
@@ -21,10 +21,8 @@
 
 ```json
 {
-  "status": 200,
-  "success": true,
-  "message": "",
-  "token": "ad123sdafgfa0asdfas12390"
+  "token": "ad123sdafgfa0asdfas12390",
+  "message": "로그인하였습니다."
 }
 ```
 
@@ -34,6 +32,6 @@
 {
   "status": 401,
   "success": false,
-  "message": "아이디 또는 비밀번호가 잘못 입력 되었습니다."
+  "message": "아이디 또는 비밀번호가 잘못 입력되었습니다."
 }
 ```
