--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -10,7 +10,6 @@
 
 ```json
 {
-  "userEamil": "ssafy@test.com",
   "selectedProject": "특화 프로젝트"
 }
 ```
@@ -23,8 +22,6 @@
 
 ```json
 {
-  "status": 200,
-  "success": true,
   "belongToTeam": true
 }
 ```
@@ -33,8 +30,6 @@
 
 ```json
 {
-  "status": 200,
-  "success": true,
   "belongToTeam": false
 }
 ```
@@ -60,7 +55,6 @@
 
 ```json
 {
-  "owner": "ssafy@test.com",
   "teamImg": "팀 이미지.png(파일 형태)",
   "campus": "서울",
   "project": "특화 프로젝트",
@@ -97,9 +91,7 @@
 
 ```json
 {
-  "status": 200,
-  "success": true,
-  "message": ""
+  "message": "팀을 성공적으로 생성하였습니다."
 }
 ```
 
@@ -131,8 +123,6 @@
 
 ```json
 {
-  "status": 200,
-  "success": true,
   "teamData": {
     "teamId": 1,
     "createDateTime": "2022-01-24",
@@ -194,7 +184,17 @@
 }
 ```
 
-- 팀 상세 정보 받아오기 실패 시
+- 팀 상세 정보 받아오기 실패 시 (해당하는 팀이 존재하지 않을 때)
+
+```json
+{
+  "status": 400,
+  "success": false,
+  "message": "해당 팀 정보가 존재하지 않습니다."
+}
+```
+
+- 팀 상세 정보 받아오기 실패 시 (서버 문제)
 
 ```json
 {
@@ -216,7 +216,6 @@
 
 ```json
 {
-  "userId": 1,
   "teamImg": "팀 이미지.png(파일 형태)",
   "campus": "서울",
   "project": "특화 프로젝트",
@@ -253,8 +252,6 @@
 
 ```json
 {
-  "status": 200,
-  "success": true,
   "message": "팀 상세 정보 수정이 완료되었습니다."
 }
 ```
@@ -290,9 +287,7 @@
 ### Request
 
 ```json
-{
-  "userId": 1
-}
+{}
 ```
 
 > params
@@ -303,8 +298,6 @@
 
 ```json
 {
-  "status": 200,
-  "success": true,
   "meesage": "팀 삭제가 완료되었습니다."
 }
 ```
