--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -18,9 +18,6 @@
 
 ```json
 {
-  "status": 200,
-  "success": true,
-  "message": "교육생 상세 정보 조회 성공",
   "userData": {
     "userId": 1,
     "userName": "박정환",
@@ -36,29 +33,23 @@
         "id": 1,
         "name": "공통 프로젝트",
         "projectTrack": "웹 기술",
-        "projectTeam" : {
+        "projectTeam": {
           "teamId": 1,
-          "teamName": "데스파시토",
-        },
+          "teamName": "데스파시토"
+        }
       },
       {
         "id": 2,
         "name": "특화 프로젝트",
         "projectTrack": "빅데이터 기술",
-        "projectTeam" : {
-          "teamId": ,
-          "teamName": "",
-        },
+        "projectTeam": ""
       },
       {
         "id": 3,
         "name": "자율 프로젝트",
         "projectTrack": "",
-        "projectTeam" : {
-          "teamId": ,
-          "teamName": "",
-        },
-      },
+        "projectTeam": ""
+      }
     ],
     "techStacks": [
       {
@@ -75,15 +66,15 @@
         "id": 3,
         "techStackName": "Redux",
         "techStackLevel": "하"
-      },
+      }
     ],
     "githubUrl": "https://github.com/ssafy-mate",
-    "etcUrl": "https://velog.io/@ssafy-mate",
+    "etcUrl": "https://velog.io/@ssafy-mate"
   }
 }
 ```
 
-- 팀 상세 정보 받아오기 실패 시 (없는 유저 아이디)
+- 교육생 상세 정보 받아오기 실패 시 (없는 교육생 아이디)
 
 ```json
 {
@@ -93,7 +84,7 @@
 }
 ```
 
-- 팀 상세 정보 받아오기 실패 시 (서버 에러)
+- 교육생 상세 정보 받아오기 실패 시 (서버 에러)
 
 ```json
 {
