--- a/api/회원가입 페이지.md
+++ b/api/회원가입 페이지.md
@@ -27,19 +27,28 @@
 
 ```json
 {
-  "status": 200,
   "success": true,
-  "message": ""
+  "message": "교육생 인증이 완료되었습니다."
 }
 ```
 
-- 인증 실패
+- 인증 실패 (등록 교육생 일때)
 
 ```json
 {
   "status": 400,
   "success": false,
-  "message": ""
+  "message": "해당 교육생 정보가 없습니다."
+}
+```
+
+- 인증 실패 (서버 오류)
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 이메일 전송 실패"
 }
 ```
 
@@ -65,9 +74,8 @@
 
 ```json
 {
-  "status": 200,
   "success": true,
-  "message": ""
+  "message": "입력한 이메일로 인증 메일을 발송했습니다.\n 이메일에 표시된 인증코드를 입력해주세요."
 }
 ```
 
@@ -114,9 +122,7 @@
 
 ```json
 {
-  "status": 200,
-  "success": true,
-  "message": ""
+  "success": true
 }
 ```
 
@@ -136,7 +142,17 @@
 {
   "status": 403,
   "success": false,
-  "message": "입력 유효 시간이 초과되었습니다."
+  "message": "인증코드가 만료되었습니다."
+}
+```
+
+- 입력 유효 시간 초과
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 인증 코드 확인 실패"
 }
 ```
 
@@ -202,9 +218,17 @@
 
 ```json
 {
-  "status": 200,
-  "success": true,
-  "message": ""
+  "message": "계정 생성이 완료되었습니다."
+}
+```
+
+- 계정 생성 실패 (입력 정보 오류)
+
+```json
+{
+  "status": 400,
+  "success": false,
+  "message": "계정 생성이 실패하였습니다."
 }
 ```
 
