--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -184,11 +184,21 @@
 }
 ```
 
+- 팀 상세 정보 받아오기 실패 시 (유효하지 않는 토큰)
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "message": "토큰이 유효하지 않습니다."
+}
+```
+
 - 팀 상세 정보 받아오기 실패 시 (해당하는 팀이 존재하지 않을 때)
 
 ```json
 {
-  "status": 400,
+  "status": 405,
   "success": false,
   "message": "해당 팀 정보가 존재하지 않습니다."
 }
