Modify : 회원가입, 교육생 관련 API 수정

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -74,11 +74,21 @@
 }
 ```
 
+- 교육생 상세 정보 받아오기 실패 시 (유효하지 않는 토큰)
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "message": "토큰이 유효하지 않습니다."
+}
+```
+
 - 교육생 상세 정보 받아오기 실패 시 (없는 교육생 아이디)
 
 ```json
 {
-  "status": 400,
+  "status": 405,
   "success": false,
   "message": "해당 교육생 정보가 존재하지 않습니다."
 }
