--- a/api/회원가입 페이지.md
+++ b/api/회원가입 페이지.md
@@ -32,13 +32,23 @@
 }
 ```
 
-- 인증 실패 (등록 교육생 일때)
+- 인증 실패 (교육생 정보 없음)
 
 ```json
 {
-  "status": 400,
+  "status": 401,
   "success": false,
   "message": "해당 교육생 정보가 없습니다."
+}
+```
+
+- 인증 실패 (이미 가입된 교육생)
+
+```json
+{
+  "status": 409,
+  "success": false,
+  "message": "이미 가입된 교육생입니다."
 }
 ```
 
