Modify : 회원가입 API 오타 수정

--- a/api/회원가입 페이지.md
+++ b/api/회원가입 페이지.md
@@ -58,7 +58,7 @@
 {
   "status": 500,
   "success": false,
-  "message": "Internal Server Error, 이메일 전송 실패"
+  "message": "Internal Server Error, 교육생 인증 실패"
 }
 ```
 
