Modify : 채팅 API 수정

--- a/api/채팅.md
+++ b/api/채팅.md
@@ -20,7 +20,7 @@
     {
       "roomId": "123-124",
       "userId": 123,
-      "userName": "조원빈",
+      "username": "조원빈",
       "profileImg": "/src/main/~~~",
       "content": "안녕하세요",
       "sentTime": "2022-01-17T17:03:36.336763"
@@ -28,7 +28,7 @@
     {
       "roomId": "122-124",
       "userId": 122,
-      "userName": "소정은",
+      "username": "소정은",
       "profileImg": "/src/main/~~~",
       "content": "안녕하세요",
       "sentTime": "2022-01-17T17:03:26.336763"
