Modify : API 변수명 개편

--- a/api/회원가입 페이지.md
+++ b/api/회원가입 페이지.md
@@ -15,7 +15,7 @@
   "campus": "서울",
   "ssafyTrack": "Java Track",
   "studentNumber": "0645387",
-  "studentName": "박정환"
+  "userName": "박정환"
 }
 ```
 
@@ -74,7 +74,7 @@
 
 ```json
 {
-  "email": "ssafy@gmail.com"
+  "userEmail": "ssafy@gmail.com"
 }
 ```
 
@@ -122,7 +122,7 @@
 ```json
 {
   "code": "abc12345",
-  "email": "ssafy@gmail.com"
+  "userEmail": "ssafy@gmail.com"
 }
 ```
 
@@ -181,8 +181,8 @@
   "campus": "서울",
   "ssafyTrack": "Java Track",
   "studentNumber": "0645387",
-  "studentName": "박정환",
-  "email": "ssafy@gmail.com",
+  "userName": "박정환",
+  "userEmail": "ssafy@gmail.com",
   "password": "a123456",
   "profileImg": "프로필 사진",
   "selfIntroduction": "안녕하세요...",
