Modify : 대화 내용 불러오기 Request userId 타입 수정

--- a/api/채팅.md
+++ b/api/채팅.md
@@ -84,8 +84,8 @@
 
 ```json
 {
-  "userId1": "123",
-  "userId2": "124",
+  "userId1": 123,
+  "userId2": 124,
   "nowPage": 1,
   "entryTime": "2022-01-17T17:03:49.336763"
 }
