Modify : API URL 변경

--- a/api/로그인 페이지.md
+++ b/api/로그인 페이지.md
@@ -4,7 +4,7 @@
 
 | TYPE |        URL        | TOKEN |
 | :--: | :---------------: | :---: |
-| POST | /api/user/sign-in |   X   |
+| POST | /api/user/signin |   X   |
 
 ### Request
 
