Modify : 이메일 인증 요청 & 재요청 POST->GET로 변경

--- a/api/회원가입 페이지.md
+++ b/api/회원가입 페이지.md
@@ -68,7 +68,7 @@
 
 | TYPE |                 URL                  | TOKEN |
 | :--: | :----------------------------------: | :---: |
-| POST | /api/user/sign-up/verification/email |   X   |
+| GET | /api/user/sign-up/verification/email |   X   |
 
 ### Request
 
@@ -77,6 +77,8 @@
   "userEmail": "ssafy@gmail.com"
 }
 ```
+
+> params
 
 ### Response
 
