Docs : API 문서 수정

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -53,18 +53,27 @@
     ],
     "techStacks": [
       {
-        "id": 1,
-        "techStackName": "JavaScript",
+        "techStack": {
+          "id": 1,
+          "techStackName": "HTML5",
+          "techStackImg": "/images/assets/tech-stack/HTML5.png"
+        },
         "techStackLevel": "상"
       },
       {
-        "id": 2,
-        "techStackName": "React",
+        "techStack": {
+          "id": 2,
+          "techStackName": "CSS3", 
+          "techStackImg": "/images/assets/tech-stack/CSS3.png"
+        },
         "techStackLevel": "중"
       },
       {
-        "id": 3,
-        "techStackName": "Redux",
+        "techStack": {
+          "id": 3,
+          "techStackName": "JavaScript",
+          "techStackImg": "/images/assets/tech-stack/JavaScript.png"
+        },
         "techStackLevel": "하"
       }
     ],
@@ -103,3 +112,77 @@
   "message": "Internal Server Error, 교육생 상세 정보 조회 실패"
 }
 ```
+
+
+
+## UPDATE | 교육생 상세 정보 수정 요청
+
+| TYPE |          URL           | TOKEN |
+| :--: | :--------------------: | :---: |
+| PUT  | /api/auth/user/:userId |   O   |
+
+### Request
+
+```json
+{
+  "profileImg": "프로필 사진",
+  "selfIntroduction": "안녕하세요...",
+  "job1": "프론트엔드 (Front-end)",
+  "job2": "백엔드 (Back-end)",
+  "techStacks": [
+    {
+      "techStackCode": 2,
+      "techStackLevel": "상"
+    },
+    {
+      "techStackNCode": 3,
+      "techStackLevel": "중"
+    }
+    {
+      "techStackCode": 4,
+      "techStackLevel": "중"
+    }
+  ],
+  "githubUrl": "https://github.com/ssafy-mate",
+  "etcUrl": "https://velog.io/@ssafy-mate",
+}
+```
+
+>formData 형식으로 전송
+>
+>최소 요건 : techStacks 2가지 이상
+>
+>특이 사항 : techStacks → Json Stringify로 처리
+
+
+
+### Response
+
+- 교육생 상세 정보 수정 성공 시
+
+```
+{
+  "message": "교육생 상세 정보 수정이 완료되었습니다."
+}
+```
+
+- 교육생 상세 정보 수정 권한 없음
+
+```
+{
+  "status": 400,
+  "success": false,
+  "message": "사용자는 정보를 수정할 수 있는 권한이 없습니다."
+}
+```
+
+- 교육생 상세 정보 수정 실패 시
+
+```
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server, 교육생 상세 정보 수정 실패"
+}
+```
+
