--- a/api/회원가입 페이지.md
+++ b/api/회원가입 페이지.md
@@ -192,23 +192,23 @@
   "job2": "백엔드 (Back-end)",
   "techStacks": [
     {
-      "techStackName": "JavaScript",
+      "techStackCode": 1,
       "techStackLevel": "상"
     },
     {
-      "techStackName": "Redux",
+      "techStackCode": 2,
       "techStackLevel": "중"
     }
     {
-      "techStackName": "Spring Boot",
+      "techStackCode": 3,
       "techStackLevel": "중"
     }
     {
-      "techStackName": "MySQL",
+      "techStackCode": 4,
       "techStackLevel": "중"
     }
     {
-      "techStackName": "Git",
+      "techStackCode": 5,
       "techStackLevel": "중"
     }
   ],
