Add : 팀 리스트 조회 API 설계

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -331,3 +331,92 @@
   "meesage": "Internal Server, 팀 삭제 실패"
 }
 ```
+<br />
+
+## ReadList | 팀 리스트 요청
+
+| TYPE |      URL       | TOKEN |
+| :--: | :------------: | :---: |
+| POST | /api/auth/team/teamList |   O   |
+
+### Request
+
+```json
+{
+  "project": "특화 프로젝트",
+  "projectTrack": "IoT",
+  "techStacks": [{
+      "techStackCode": 1
+    },
+    {
+      "techStackCode": 3
+    },
+    {
+      "techStackCode": 4
+    }
+  ],
+  "teamName": "싸피",
+  "job": "프론트엔드(Front-end)",
+  "sort": "최신순",
+  "nowPage": 1
+}
+```
+
+### Response
+
+```json
+{
+  "teams": [
+    {
+      "teamId": 1,
+      "teamImgUrl": "C:\\image\\team_image\\default_img.jpg",
+      "campus": "서울",
+      "teamName": "팀 싸피",
+      "notice": "개발개발",
+      "techStacks": [
+        {
+          "techStack": {
+            "id": 1,
+            "techStackName": "HTML5",
+            "techStackImg": "/images/assets/tech-stack/HTML5.png"
+          }
+        },
+        {
+          "techStack": {
+            "id": 2,
+            "techStackName": "CSS3",
+            "techStackImg": "/images/assets/tech-stack/CSS3.png"
+          }
+        },
+        {
+          "techStack": {
+            "id": 3,
+            "techStackName": "JavaScript",
+            "techStackImg": "/images/assets/tech-stack/JavaScript.png"
+          }
+        }
+      ],
+      "totalRecruitment": 6,
+      "frontendRecruitment": 3,
+      "backendRecruitment": 3,
+      "totalHeadcount": 1,
+      "frontendHeadcount": 1,
+      "backendHeadcount": 0,
+      "createDateTime": null
+    }
+  ],
+  "totalPage": 1,
+  "nowPage": 1
+}
+```
+
+
+- 서버 처리 실패
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "meesage": "Internal Server, 팀 리스트 조회 실패"
+}
+```
