Modify : 교육생 관련 API 수정

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -56,7 +56,7 @@
         "techStack": {
           "id": 1,
           "techStackName": "HTML5",
-          "techStackImg": "/images/assets/tech-stack/HTML5.png"
+          "techStackImgUrl": "/images/assets/tech-stack/HTML5.png"
         },
         "techStackLevel": "상"
       },
@@ -64,7 +64,7 @@
         "techStack": {
           "id": 2,
           "techStackName": "CSS3", 
-          "techStackImg": "/images/assets/tech-stack/CSS3.png"
+          "techStackImgUrl": "/images/assets/tech-stack/CSS3.png"
         },
         "techStackLevel": "중"
       },
@@ -72,7 +72,7 @@
         "techStack": {
           "id": 3,
           "techStackName": "JavaScript",
-          "techStackImg": "/images/assets/tech-stack/JavaScript.png"
+          "techStackImgUrl": "/images/assets/tech-stack/JavaScript.png"
         },
         "techStackLevel": "하"
       }
