Modify : 팀 수정 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -235,13 +235,13 @@
   "introduction": "환상의 호흡으로 프로젝트 진행해 보고 싶습니다. 백엔드는 ... 프론트는 ... 이런 식으로 개발 진행하려고 합니다.",
   "techStacks": [
     {
-      "techStacksName": "JavaScript"
+      "techStackName": "JavaScript"
     },
     {
-      "techStacksName": "JPA"
+      "techStackName": "JPA"
     },
     {
-      "techStacksName": "Spring Boot"
+      "techStackName": "Spring Boot"
     }
   ],
   "totalRecruitment": 6,
