Modify : 팀 리스트 조회 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -337,7 +337,7 @@
 
 | TYPE |      URL       | TOKEN |
 | :--: | :------------: | :---: |
-| POST | /api/auth/team/teamList |   O   |
+| POST | /api/auth/team/team-list |   O   |
 
 ### Request
 
@@ -375,26 +375,15 @@
       "notice": "개발개발",
       "techStacks": [
         {
-          "techStack": {
-            "id": 1,
-            "techStackName": "HTML5",
-            "techStackImg": "/images/assets/tech-stack/HTML5.png"
-          }
+          "id": 1,
+          "techStackName": "HTML5",
+          "techStackImg": "/images/assets/tech-stack/HTML5.png"
         },
         {
-          "techStack": {
-            "id": 2,
-            "techStackName": "CSS3",
-            "techStackImg": "/images/assets/tech-stack/CSS3.png"
-          }
+          "id": 2,
+          "techStackName": "CSS3",
+          "techStackImg": "/images/assets/tech-stack/CSS3.png"
         },
-        {
-          "techStack": {
-            "id": 3,
-            "techStackName": "JavaScript",
-            "techStackImg": "/images/assets/tech-stack/JavaScript.png"
-          }
-        }
       ],
       "totalRecruitment": 6,
       "frontendRecruitment": 3,
