Modify : 로그인 성공 시, 응답 데이터 추가

--- a/api/로그인 페이지.md
+++ b/api/로그인 페이지.md
@@ -21,8 +21,30 @@
 
 ```json
 {
+  "userId": 1,
+  "userName": "박정환",
+  "userEmail": "jeonghwan.dev@gmail.com",
+  "studentNumber": "0645387",
+  "campus": "서울",
+  "ssafyTrack": "Java Track",
   "token": "ad123sdafgfa0asdfas12390",
-  "message": "로그인하였습니다."
+  "message": "로그인하였습니다.",
+  "projects": [
+  {
+    "projectId": 1,
+    "projectName": "공통 프로젝트",
+    "projectTrack": "웹 기술",
+  },
+  {
+    "projectId": 2,
+    "projectName": "특화 프로젝트",
+    "projectTrack": null,
+  },
+  {
+    "projectId": 3,
+    "projectName": "자율 프로젝트",
+  },
+]
 }
 ```
 
