--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -337,30 +337,24 @@
 
 | TYPE |      URL       | TOKEN |
 | :--: | :------------: | :---: |
-| POST | /api/auth/team/team-list |   O   |
+| get | /api/auth/project/team-list |   O   |
 
 ### Request
 
 ```json
 {
   "project": "특화 프로젝트",
-  "projectTrack": "IoT",
-  "techStacks": [{
-      "techStackCode": 1
-    },
-    {
-      "techStackCode": 3
-    },
-    {
-      "techStackCode": 4
-    }
-  ],
-  "teamName": "싸피",
-  "job": "프론트엔드(Front-end)",
+  "project_track": "인공지능",
+  "techstack_code": 1,
+  "team_name": "싸피",
+  "job1": "프론트엔드(Front-end)",
   "sort": "최신순",
-  "nowPage": 1
+  "page": 1
 }
 ```
+
+> Query String Params 형식으로 요청
+
 
 ### Response
 
@@ -371,18 +365,18 @@
       "teamId": 1,
       "teamImgUrl": "C:\\image\\team_image\\default_img.jpg",
       "campus": "서울",
+      "projectName": "특화 프로젝트",
+      "projectTrack": "인공지능", 
       "teamName": "팀 싸피",
       "notice": "개발개발",
       "techStacks": [
         {
           "id": 1,
           "techStackName": "HTML5",
-          "techStackImg": "/images/assets/tech-stack/HTML5.png"
         },
         {
           "id": 2,
           "techStackName": "CSS3",
-          "techStackImg": "/images/assets/tech-stack/CSS3.png"
         },
       ],
       "totalRecruitment": 6,
@@ -391,11 +385,12 @@
       "totalHeadcount": 1,
       "frontendHeadcount": 1,
       "backendHeadcount": 0,
-      "createDateTime": null
+      "createDateTime": null,
     }
   ],
   "totalPage": 1,
-  "nowPage": 1
+  "nowPage": 1,
+  "totalElement": 20,
 }
 ```
 
