Add : 교육생 리스트 조회 API 설계

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -186,3 +186,96 @@
 }
 ```
 
+
+## ReadList | 교육생 리스트 요청
+
+| TYPE |      URL       | TOKEN |
+| :--: | :------------: | :---: |
+| get | /api/auth/project/user-list |   O   |
+
+### Request
+
+```json
+{
+  "campus": "서울",
+  "project": "특화 프로젝트",
+  "project_track": "인공지능",
+  "ssafy_track": "Java Track",
+  "techstack_code": 1,
+  "user_name": "박정환",
+  "job1": "프론트엔드(Front-end)",
+  "sort": "최신순",
+  "page": 1
+}
+```
+
+> Query String Params 형식으로 요청
+
+
+### Response
+
+```json
+{
+  "users": [
+    {
+      "userId": 4,
+      "profileImgUrl": "C:\\image\\team_image\\default_img.jpg",
+      "campus": "서울",
+      "projectTrack": "빅데이터",
+      "ssafyTrack": "Java Track",
+      "userName": "박정환",
+      "techStacks": [
+        {
+          "id": 4,
+          "techStackName": "TypeScript"
+        },
+        {
+          "id": 5,
+          "techStackName": "Vue.js"
+        }
+      ],
+      "job1": "백엔드 (Back-end)",
+      "job2": "프론트엔드 (Front-end)",
+      "githubUrl": "https://github.com/ssafy-mate",
+      "belongToTeam": "False"
+    },
+    {
+      "userId": 3,
+      "profileImgUrl": "C:\\image\\team_image\\default_img.jpg",
+      "campus": "서울",
+      "projectTrack": "인공지능",
+      "ssafyTrack": "Java Track",
+      "userName": "이정훈",
+      "techStacks": [
+        {
+          "id": 1,
+          "techStackName": "HTML5"
+        },
+        {
+          "id": 2,
+          "techStackName": "CSS3"
+        }
+      ],
+      "job1": "프론트엔드 (Front-end)",
+      "job2": "백엔드 (Back-end)",
+      "githubUrl": "https://github.com/ssafy-mate",
+      "belongToTeam": "False"
+    },
+  ],
+  "totalPage": 1,
+  "nowPage": 1,
+  "totalElement": 2
+}
+```
+
+
+- 서버 처리 실패
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "meesage": "Internal Server, 팀 리스트 조회 실패"
+}
+```
+
