Modify : 팀 리스트 조회 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -333,7 +333,7 @@
 ```
 <br />
 
-## ReadList | 팀 리스트 요청
+## READ | 팀 리스트 요청
 
 | TYPE |      URL       | TOKEN |
 | :--: | :------------: | :---: |
@@ -349,12 +349,15 @@
   "techstack_code": 1,
   "team_name": "싸피",
   "job1": "프론트엔드(Front-end)",
-  "sort": "최신순",
+  "exclusion": false,
+  "sort": "recent",
   "page": 1
 }
 ```
 
 > Query String Params 형식으로 요청
+> exclusion : true 일 때 모집 마감 팀 공고 제외
+> sort : 'recent' 일 때 등록 최신순 정렬, 'headcount' total 인원 적은 순 정렬
 
 
 ### Response
@@ -387,6 +390,7 @@
       "frontendHeadcount": 1,
       "backendHeadcount": 0,
       "createDateTime": null,
+      "isRecruiting": true
     }
   ],
   "totalPage": 1,
@@ -394,6 +398,8 @@
   "totalElement": 20,
 }
 ```
+
+> isRecruiting : true 일 때 모집 중 false 일 때 모집 마감
 
 
 - 서버 처리 실패
