--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -187,7 +187,7 @@
 ```
 
 
-## ReadList | 교육생 리스트 요청
+## READE | 교육생 리스트 요청
 
 | TYPE |      URL       | TOKEN |
 | :--: | :------------: | :---: |
@@ -205,6 +205,7 @@
   "user_name": "박정환",
   "job1": "프론트엔드(Front-end)",
   "sort": "최신순",
+  "exclusion" : false
   "page": 1
 }
 ```
