Modify : 팀 리스트 조회 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -371,7 +371,7 @@
       "teamId": 1,
       "teamImgUrl": "C:\\image\\team_image\\default_img.jpg",
       "campus": "서울",
-      "projectName": "특화 프로젝트",
+      "project": "특화 프로젝트",
       "projectTrack": "인공지능", 
       "teamName": "팀 싸피",
       "notice": "개발개발",
