Modify : 교육생 리스트 조회 API 수정

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -260,7 +260,7 @@
       "job1": "프론트엔드 (Front-end)",
       "job2": "백엔드 (Back-end)",
       "githubUrl": "https://github.com/ssafy-mate",
-      "belongToTeam": "False"
+      "belongToTeam": false
     },
   ],
   "totalPage": 1,
