--- a/api/로그인 페이지.md
+++ b/api/로그인 페이지.md
@@ -57,3 +57,162 @@
   "message": "아이디 또는 비밀번호가 잘못 입력되었습니다."
 }
 ```
+
+<br />
+
+## 아이디 찾기
+
+| TYPE |        URL        | TOKEN |
+| :--: | :---------------: | :---: |
+| GET | /api/user/id-search |   X   |
+
+### Request
+
+```json
+{
+  "studentNumber": "02315462",
+  "userName": "이싸피"
+}
+```
+
+> params
+
+### Response
+
+- 인증 성공
+
+```json
+{
+  "success": true,
+  "userEmail": "sugarfina637@naver.com",
+  "message": "",
+}
+```
+
+- 인증 실패 (입력 정보 불일치 또는 해당 정보 없을 때)
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "message": "가입 시 입력하신 회원 정보가 맞는지 다시 한번 확인해 주세요."
+}
+```
+
+- 인증 실패 (서버 오류)
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 아이디 찾기 실패"
+}
+```
+
+<br />
+
+## 비밀번호 찾기( 인증 요청 & 재요청)
+
+| TYPE |        URL        | TOKEN |
+| :--: | :---------------: | :---: |
+| GET | /api/user/pw-search |   X   |
+
+### Request
+
+```json
+{
+  "studentNumber": "02315462",
+  "userEmail" : "ssafy@test.com",
+  "userName": "이싸피"
+}
+```
+
+> params
+
+### Response
+
+- 인증 성공
+
+```json
+{
+  "success": true,
+  "message": "입력한 이메일로 인증 메일을 발송했습니다.\n 이메일에 표시된 인증코드를 입력해주세요."
+}
+```
+
+- 인증 실패 (입력 정보 불일치 또는 해당 정보 없을 때)
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "message": "가입 시 입력하신 회원 정보가 맞는지 다시 한번 확인해 주세요."
+}
+```
+
+- 인증 실패 (서버 오류)
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 이메일 전송 실패"
+}
+```
+
+<br />
+
+## 비밀번호 찾기(인증 코드 확인)
+
+| TYPE |        URL        | TOKEN |
+| :--: | :---------------: | :---: |
+| POST | /api/user/pw-search |   X   |
+
+### Request
+
+```json
+{
+  "code": "02ds5462",
+  "userEmail" : "ssafy@test.com",
+}
+```
+
+### Response
+
+- 인증 코드 확인 성공
+
+```json
+{
+  "success": true
+}
+```
+
+- 올바른 인증 코드가 아닌 경우
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "message": "올바른 인증 코드가 아닙니다."
+}
+```
+
+- 입력 유효 시간 초과
+
+```json
+{
+  "status": 403,
+  "success": false,
+  "message": "인증코드가 만료되었습니다."
+}
+```
+
+- 인증 코드 확인 실패 (서버 오류)
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 인증 코드 확인 실패"
+}
+```
