Modify : 비밀번호 재설정 API 수정

--- a/api/로그인 페이지.md
+++ b/api/로그인 페이지.md
@@ -58,6 +58,16 @@
 }
 ```
 
+- 로그인 실패 (서버 오휴)
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 로그인 실패"
+}
+```
+
 <br />
 
 ## 아이디 찾기
@@ -85,7 +95,7 @@
 {
   "success": true,
   "userEmail": "sugarfina637@naver.com",
-  "message": "",
+  "message": "고객님의 싸피메이트 계정을 찾았습니다.\n 아이디 확인 후 로그인 해주세요.",
 }
 ```
 
@@ -111,7 +121,7 @@
 
 <br />
 
-## 비밀번호 찾기( 인증 요청 & 재요청)
+## 비밀번호 재설정 (인증 요청 & 재요청)
 
 | TYPE |        URL        | TOKEN |
 | :--: | :---------------: | :---: |
@@ -121,9 +131,7 @@
 
 ```json
 {
-  "studentNumber": "02315462",
-  "userEmail" : "ssafy@test.com",
-  "userName": "이싸피"
+  "userEmail" : "ssafy@test.com"
 }
 ```
 
@@ -162,7 +170,7 @@
 
 <br />
 
-## 비밀번호 찾기(인증 코드 확인)
+## 비밀번호 재설정 (인증 코드 확인)
 
 | TYPE |        URL        | TOKEN |
 | :--: | :---------------: | :---: |
@@ -214,5 +222,43 @@
   "status": 500,
   "success": false,
   "message": "Internal Server Error, 인증 코드 확인 실패"
+}
+```
+
+<br />
+
+## 비밀번호 재설정 (새로운 비밀번호 설정)
+
+| TYPE |        URL        | TOKEN |
+| :--: | :---------------: | :---: |
+| PUT | /api/user/pw-search |   X   |
+
+### Request
+
+```json
+{
+  "userEmail" : "ssafy@test.com",
+  "password": "dsfksldf"
+}
+```
+
+### Response
+
+- 새로운 비밀번호 재설정 성공
+
+```json
+{
+  "success": true,
+  "message": "비밀번호 재설정이 완료되었습니다."
+}
+```
+
+- 새로운 비밀번호 재설정 실패 (서버 오류)
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 비밀번호 재설정 실패"
 }
 ```
